// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Screens/Schedule Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              menu.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="container"
        >
          <div
            className="datePicker"
          >
            <svg
              className="chevronRight"
              onClick={[Function]}
            >
              chevron-right-small.svg
            </svg>
            <svg
              className="calendar"
            >
              calendar.svg
            </svg>
            <div
              className="dateLabel"
            >
              <span
                className="monthName"
              >
                ינואר
              </span>
              <span
                className="yearName"
              >
                
                ,
              </span>
              16
              -
              21
            </div>
            <svg
              className="chevronLeft"
              onClick={[Function]}
            >
              chevron-left-small.svg
            </svg>
          </div>
          <div
            className="hospitalSelectable"
            onClick={[Function]}
          >
            <svg
              className="chevronDown"
            >
              chevron-down.svg
            </svg>
            הדסה עין כרם
          </div>
        </div>
        <div
          className="hospitalPicker"
        >
          <div
            className="hospitalPickerTitle"
          >
            בחר/י בית חולים:
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName selectedHospital bottomBorder"
            >
              <svg
                className="selected"
              >
                selected.svg
              </svg>
              הדסה עין כרם
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName bottomBorder"
            >
              סורוקה
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName"
            >
              תל השומר
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="schedule"
      >
        <div
          className="gridColumns"
        >
          <div />
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              16
            </div>
            <div
              className="dayLetter"
            >
              א
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              17
            </div>
            <div
              className="dayLetter"
            >
              ב
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              18
            </div>
            <div
              className="dayLetter"
            >
              ג
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              19
            </div>
            <div
              className="dayLetter"
            >
              ד
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              20
            </div>
            <div
              className="dayLetter"
            >
              ה
            </div>
          </div>
          <div
            className="dayLabel"
          >
            <div
              className="dayNumber"
            >
              21
            </div>
            <div
              className="dayLetter"
            >
              ו
            </div>
          </div>
          <div />
        </div>
        <div
          className="scheduleWeek gridColumns"
        >
          <div
            className="hourCell"
          >
            0
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            1
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            2
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            3
          </div>
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            4
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            5
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            6
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            7
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            8
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            9
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            10
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            11
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            12
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            13
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            14
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            15
          </div>
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            16
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            17
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            18
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            19
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            20
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            21
          </div>
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
          <div
            className="hourCell"
          >
            22
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            0/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            1/3
          </div>
          <div />
          <div
            className="hourCell"
          >
            23
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare partiallyBooked"
            onClick={[Function]}
          >
            2/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div
            className="scheduleHourSquare fullyBooked"
            onClick={[Function]}
          >
            3/3
          </div>
          <div
            className="scheduleHourSquare empty"
            onClick={[Function]}
          />
          <div />
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-9 MuiFab-root-25 makeStyles-fab-24 MuiFab-extended-29 MuiFab-primary-27"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label-26"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-35"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <div
          className="text"
        >
          הוסף תור
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Screens/Schedule Screen Loading 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg>
              menu.svg
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          className="container"
        >
          <div
            className="datePicker"
          >
            <svg
              className="chevronRight"
              onClick={[Function]}
            >
              chevron-right-small.svg
            </svg>
            <svg
              className="calendar"
            >
              calendar.svg
            </svg>
            <div
              className="dateLabel"
            >
              <span
                className="monthName"
              >
                ינואר
              </span>
              <span
                className="yearName"
              >
                
                ,
              </span>
              16
              -
              21
            </div>
            <svg
              className="chevronLeft"
              onClick={[Function]}
            >
              chevron-left-small.svg
            </svg>
          </div>
          <div
            className="hospitalSelectable"
            onClick={[Function]}
          >
            <svg
              className="chevronDown"
            >
              chevron-down.svg
            </svg>
            הדסה עין כרם
          </div>
        </div>
        <div
          className="hospitalPicker"
        >
          <div
            className="hospitalPickerTitle"
          >
            בחר/י בית חולים:
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName selectedHospital bottomBorder"
            >
              <svg
                className="selected"
              >
                selected.svg
              </svg>
              הדסה עין כרם
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName bottomBorder"
            >
              סורוקה
            </div>
          </div>
          <div
            className="hospitalOption"
            onClick={[Function]}
          >
            <div
              className="hospitalName"
            >
              תל השומר
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="spinner"
      >
        <div
          className="MuiCircularProgress-root-24 MuiCircularProgress-colorPrimary-28 MuiCircularProgress-indeterminate-26"
          role="progressbar"
          style={
            Object {
              "height": "3rem",
              "width": "3rem",
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-30"
            viewBox="22 22 44 44"
          >
            <circle
              className="MuiCircularProgress-circle-31 MuiCircularProgress-circleIndeterminate-33"
              cx={44}
              cy={44}
              fill="none"
              r={20.2}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
      </div>
    </div>
    <button
      className="MuiButtonBase-root-9 MuiFab-root-39 makeStyles-fab-38 MuiFab-extended-43 MuiFab-primary-41"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label-40"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-49"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <div
          className="text"
        >
          הוסף תור
        </div>
      </span>
    </button>
  </div>
</div>
`;
